--- a/src/main/resources/templates/execute_playbook.html
+++ b/src/main/resources/templates/execute_playbook.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head>
+    <title>V6 Ansible Automation</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-0svjQEgQWvzfU7Cp+(BsQYRjqhGMF6xGb+AzHRqpdijFoUiP7NvPPCENcqa2VbRO" crossorigin="anonymous">
+</head>
 <body>
-<h1>V6 Ansible automation</h1>
-<form th:action="@{execute}" method="post">
-    <label>Playbook</label>
-    <select name="playbook" id="playbook">
-        <option th:each="playbook : ${playbooks}" th:value="${playbook}" th:text="${playbook}"></option>
-    </select><br/>
-    <label>Target</label>
-    <select name="target" id="target">
-        <option th:each="target : ${inventory}" th:value="${target}" th:text="${target}"></option>
-    </select><br/>
-    <input type="submit" value="Execute"></input>
-</form>
+<div class="container mt-3">
+    <h1>V6 Ansible automation</h1>
+    <form th:action="@{execute}" method="post" class="row mb-3">
+        <div class="col-md-6 mb-3">
+            <label for="playbook" class="form-label">Playbook</label>
+            <select name="playbook" id="playbook" class="form-select">
+                <option th:each="playbook : ${playbooks}" th:value="${playbook}" th:text="${playbook}"></option>
+            </select>
+        </div>
+        <div class="col-md-6 mb-3">
+            <label for="target" class="form-label">Target</label>
+            <select name="targets" id="target" multiple class="form-select">
+                <option th:each="target : ${inventory}" th:value="${target}" th:text="${target}"></option>
+            </select>
+        </div>
+        <div class="col-12">
+            <input type="submit" value="Execute" class="btn btn-primary">
+        </div>
+    </form>
+</div>
 </body>
 </html>
