--- a/src/main/resources/templates/view_result.html
+++ b/src/main/resources/templates/view_result.html
@@ -1,26 +1,39 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>V6 Ansible Automation Results</title>
+    <title>V6 Ansible Automation</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-0svjQEgQWvzfU7Cp+(BsQYRjqhGMF6xGb+AzHRqpdijFoUiP7NvPPCENcqa2VbRO" crossorigin="anonymous">
 </head>
 <body>
-
-<h1>V6 Ansible Automation</h1>
-<table>
-    <tr>
-        <th>Id</th>
-        <th>Playbook</th>
-        <th>Target</th>
-        <th>Status</th>
-        <th>Execution Time</th>
-    </tr>
-    <tr th:each="job : ${jobs}">
-        <td th:text="${job.id}"></td>
-        <td th:text="${job.playbook}"></td>
-        <td th:text="${job.target}"></td>
-        <td th:text="${job.status}"></td>
-        <td th:text="${job.getStartTime()}"></td>
-    </tr>
-</table>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<header class="bg-dark text-light py-3">
+    <div class="container">
+        <h1>V6 Ansible Automation</h1>
+    </div>
+</header>
+<div class="container mt-3">
+    <table class="table table-hover table-bordered table-sm">
+        <thead>
+        <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Playbook</th>
+            <th scope="col">Target</th>
+            <th scope="col">Status</th>
+            <th scope="col">Execution Targets</th>
+            <th scope="col">Execution Time</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="job : ${jobs}">
+            <td th:text="${job.id}"></td>
+            <td th:text="${job.playbook}"></td>
+            <td th:text="${job.target}"></td>
+            <td th:text="${job.status}"></td>
+            <td th:text="${job.getListOfTargets()}"></td>
+            <td th:text="${job.getStartTime()}"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </body>
 </html>
