--- a/src/main/resources/templates/view_result_detail.html
+++ b/src/main/resources/templates/view_result_detail.html
@@ -2,20 +2,27 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>View Results</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
 </head>
 <body>
 
-<h1>V6 Ansible Automation Results</h1>
+<div class="container mt-3">
+    <h1>V6 Ansible Automation Results</h1>
+    <table class="table table-striped table-bordered">
+        <thead>
+        <tr>
+            <th scope="col">Artifact Type</th>
+            <th scope="col">Artifact Value</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="job : ${globalists}">
+            <td th:text="${job.getType()}"></td>
+            <td th:text="${job.getValue()}"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 
-<table>
-    <tr>
-        <th>Artifact Type</th>
-        <th>Artifact Value</th>
-    </tr>
-    <tr th:each="job : ${globalists}">
-        <td th:text="${job.getType()}"></td>
-        <td th:text="${job.getValue()}"></td>
-    </tr>
-</table>
 </body>
 </html>
