--- a/src/main/resources/templates/view_result_detail.html
+++ b/src/main/resources/templates/view_result_detail.html
@@ -4,6 +4,15 @@
     <title>View Results</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
 </head>
+<script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+<script>
+    $(document).ready(() => {
+        $.ajax("http://localhost:8080/api/consoleoutput")
+            .done((data) => {
+                $("#id").innerHTML(data);
+            })
+    })
+</script>
 <body>
 
 <div class="container mt-3">
@@ -22,6 +31,9 @@
         </tr>
         </tbody>
     </table>
+</div>
+<div id="output">
+    output123
 </div>
 
 </body>
