dynamic loading for result

--- a/src/main/resources/templates/view_result_detail.html
+++ b/src/main/resources/templates/view_result_detail.html
@@ -9,7 +9,7 @@
     $(document).ready(() => {
         $.ajax("http://localhost:8080/api/consoleoutput")
             .done((data) => {
-                $("#id").innerHTML(data);
+                $("#output").html(data);
             })
     })
 </script>
