--- a/src/main/resources/templates/execute_playbook.html
+++ b/src/main/resources/templates/execute_playbook.html
@@ -5,8 +5,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" integrity="sha384-0svjQEgQWvzfU7Cp+(BsQYRjqhGMF6xGb+AzHRqpdijFoUiP7NvPPCENcqa2VbRO" crossorigin="anonymous">
 </head>
 <body>
+<div th:replace="fragments/navbar :: navbar"></div>
 <div class="container mt-3">
-    <h1>V6 Ansible automation</h1>
+    <h1>Playbook Executor</h1>
     <form th:action="@{execute}" method="post" class="row mb-3">
         <div class="col-md-6 mb-3">
             <label for="playbook" class="form-label">Playbook</label>
@@ -22,6 +23,10 @@
         </div>
         <div class="col-12">
             <input type="submit" value="Execute" class="btn btn-primary">
+        </div>
+        <div class="col-md-6 mb-3">
+            <label for="jmcRunningTime" class="form-label">JMC Running Time (optional)</label>
+            <input type="text" name="jmcRunningTime" id="jmcRunningTime" class="form-control" placeholder="Enter JMC Running Time">
         </div>
     </form>
 </div>
